--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,10 @@
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
+
+html,
+body {
+  overflow-x: hidden;
+}
 
 @custom-variant dark (&:is(.dark *));
 
