--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -161,3 +161,8 @@ body {
     transform: rotate(360deg);
   }
 }
+
+.set {
+  position: sticky !important;
+  top: 6rem !important; /* adjust for your header height */
+}
